--- a/apps/wallet/instance/src/main/assets/swap/index.html
+++ b/apps/wallet/instance/src/main/assets/swap/index.html
@@ -2,11 +2,8 @@
 <html>
 
 <body>
-    <script src="bundle.js"> </script>
-    <script src="client.js"> </script>
-
-    <p id="resultText">Wait call</p>
-    <p><button onclick="swapTonToJetton()">Transfer</button></p>
+<script src="bridge.js"></script>
+<script src="bundle.js"></script>
 </body>
 
 </html>
